# RVM

./: .gitignore  Cargo.toml  README.md
doc/: root.md
sample/: asm.sh  s.asm
src/: main.rs  mod.rs
src/arch/: README.md
src/arch/x86/: mod.rs
src/arch/x86/shared/: alu.rs  cpu.rs  mod.rs  opcode_handler.rs
src/arch/x86/shared/handlers/: add.rs  and.rs  cmp.rs  dec.rs  inc.rs  je.rs  jmp.rs  jne.rs  mod.rs  mov.rs  nop.rs  or.rs  pop.rs  push.rs  sub.rs  syscall.rs  xor.rs
src/arch/x86/x86_64/: alu.rs  cpu.rs  load.rs  mod.rs  opcode_handler.rs  scheduler.rs  systbl.rs
src/arch/x86/x86_64/handlers/: add.rs  and.rs  call.rs  cmp.rs  dec.rs  endbr64.rs  inc.rs  je.rs  jmp.rs  jne.rs  lea.rs  mod.rs  mov.rs  or.rs  pop.rs  push.rs  ret.rs  sub.rs  syscall.rs  xor.rs
src/arch/x86/x86_64/syscalls/: mod.rs  syscall.rs  systbl.rs
src/arch/x86/x86_64/syscalls/handlers/: exit.rs  mod.rs  write.rs
src/loader/: README.md
src/loader/elf/: init.rs  load.rs
src/mem/: README.md  mem.rs  mod.rs  op.rs
src/mem/comp/: mod.rs  segments.rs  stack.rs
