[package]
name = "rvm"
version = "0.1.0"
authors = ["leo.karoubi <leokaroubi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.2.3"
libc = "0.2.71"
anyhow = "1.0.31"
iced-x86 = "1.2.0"
procfs = "0.7.9"